# GoogleHack26-team15

./: .gitignore  .mcp.json  README.md  deploy.sh  docker-compose.yml
.gemini/: settings.json
.github/workflows/: deploy.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/agents/content/: agent.py
backend/agents/instagram/: agent.py  instagram_mock.py
backend/agents/onboarding/: agent.py
backend/agents/root/: agent.py
backend/agents/strategy/: agent.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  content_agent.py  instagram_agent.py  onboarding_agent.py  root_agent.py  strategy_agent.py
backend/app/services/: __init__.py  memory_service.py
frontend/: Dockerfile  next.config.ts  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/content/: page.tsx
frontend/src/app/instagram/: page.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/app/strategy/: page.tsx
frontend/src/components/: chat.tsx  sidebar.tsx
frontend/src/lib/: api.ts  utils.ts
terraform/: README.md  main.tf  metadata.display.json  metadata.yaml  outputs.tf  terraform.tfvars.example  variables.tf
terraform-adc/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example
